--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.14.9",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.0"
   }
 }
